--- a/src/behaviors/su-print-behavior.html
+++ b/src/behaviors/su-print-behavior.html
@@ -238,8 +238,8 @@
           printable.close();
         };
 
-        //su-medical case
-        if(this.page==="su-medical"){
+        //su-uploads case
+        if(this.page==="su-uploads"){
           var printable=window.open("","printable");
           printable.document.write("<html><head>");
           printable.document.write("</head><body>");
