--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -200,7 +200,7 @@
           this.updateStyles();
 
         };
-        if(this.page==="su-medical"){
+        if(this.page==="su-uploads"){
 
         };
         if(this.page==="su-medication"){
