--- a/src/elements/guuey-table/guuey-table.html
+++ b/src/elements/guuey-table/guuey-table.html
@@ -17,7 +17,7 @@
 
     <firebase-document
       id="tableDB"
-      path="{{path}}"
+      path="[[path]]"
       data="{{rowInputs}}"
       app-name="main">
     </firebase-document>
