--- a/src/elements/guuey-verify/guuey-verify.html
+++ b/src/elements/guuey-verify/guuey-verify.html
@@ -82,7 +82,7 @@
                   Your password must be at least 6 characters long.
                 </p>
 
-                <paper-input label="New Password" value="{{newPassword}}"></paper-input>
+                <paper-input type="password" label="New Password" value="{{newPassword}}"></paper-input>
                 <paper-button on-tap="changePassword">change password</paper-button>
 
               </span>
