--- a/src/pages/care-plan/su-medication.html
+++ b/src/pages/care-plan/su-medication.html
@@ -427,7 +427,7 @@
             on-tap="openTimeChunkOptions">
           </paper-icon-button>
         </paper-item>
-        <iron-collapse id="morning" opened>
+        <iron-collapse id="morning">
           <div class="guuey-table offset-table">
 
             <table>
