--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -432,6 +432,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       transform: translate(-50%,-50%);
     }
 
+    .searchImage {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+    }
+
+    .searchName {
+      margin-left: 10px;
+    }
+
     </style>
   </template>
 </dom-module>
