--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -194,6 +194,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .guuey-modal {
         overflow-y: auto;
         overflow-x: hidden;
+        top: var(--guuey-modal-top);
+        right: var(--guuey-modal-right);
+        position: fixed;
         --paper-dialog:{
           :host{
             margin:0;
@@ -205,7 +208,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
       .guuey-modal *{
-        padding:10px;
+        padding:20px;
       }
       .guuey-modal .cancel-button{
         color:inherit;
