--- a/test/index.html
+++ b/test/index.html
@@ -45,8 +45,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //'su-care.html?dom=shadow',
 
         //need to figure out a way of imperitively declaring a file to upload and test
-        //'su-medical.html?dom=shady',
-        //'su-medical.html?dom=shadow',
+        //'su-uploads.html?dom=shady',
+        //'su-uploads.html?dom=shadow',
 
         //date computes arent done for these... not really sure what ther is to test here other than class updates which are done
         //'su-monthly-reports.html?dom=shady',
