--- a/src/elements/account-header/account-header.html
+++ b/src/elements/account-header/account-header.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html" />
-<link rel="import" href="../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../bower_components/iron-image/iron-image.html" />
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../bower_components/iron-icon/iron-icon.html" />
@@ -9,10 +8,12 @@
 <link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html" />
+<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
+<link rel="import" href="../../../bower_components/iron-icons/image-icons.html">
 
 <link rel="import" href="../guuey-photo-editor/guuey-photo-editor.html" />
 
-<link rel="import" href="../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+
 
 <!--
 `account-header`
@@ -147,6 +148,11 @@ header element that contains an editable user photo and name.
       }
     </style>
 
+    <guuey-photo-editor
+      id="photoEditor"
+      value="{{photo}}">
+    </guuey-photo-editor>
+
     <div class="pageHeader">
       <div class="headerAvatar">
 
@@ -158,10 +164,12 @@ header element that contains an editable user photo and name.
           fade
           src="[[photo]]">
         </iron-image>
-          <guuey-photo-editor
-            class="imageButton"
-            value="{{photo}}">
-          </guuey-photo-editor>
+
+        <paper-icon-button
+          class="imageButton"
+          icon="image:add-a-photo"
+          on-tap="openGuueyDialog">
+        </paper-icon-button>
 
       </div>
       <div class="headerInfoRow">
@@ -263,6 +271,11 @@ header element that contains an editable user photo and name.
       observers: [
         "_editQuery(query1600, query1400, query1200, query1000, query800, query600)"
       ],
+      
+      openGuueyDialog: function() {
+        this.$.photoEditor.open();
+      },
+
       //return display name from account or email if no display name is present
       _returnName:function(name) {
         return name === "No Display Name" ? this.email : this.name;
