--- a/src/elements/admin-drawer/admin-drawer.html
+++ b/src/elements/admin-drawer/admin-drawer.html
@@ -83,6 +83,13 @@ drawer for admin functions
         color: inherit;
       }
 
+      paper-listbox.selected {
+        outline: none;
+      }
+      paper-listbox {
+        outline: none;
+      }
+
       .username {
         margin: 20px 0 20px 20px;
       }
@@ -115,8 +122,9 @@ drawer for admin functions
         margin-top: 20px;
       }
 
-      .adrawer-list: {
+      .adrawer-list {
         color: #FFFFFF;
+        outline: none;
       }
 
       .adrawer-list a.iron-selected {
@@ -143,12 +151,12 @@ drawer for admin functions
     <app-drawer id="adminDrawer" position="start" opened="{{opened}}">
       <app-toolbar>
         <iron-image
-          src="../../../images/defaultAvatar.png"
+          src="[[image]]"
           top-item
           sizing="cover">
         </iron-image>
         <p class="username" bottom-item>
-          [[user.email]]
+          [[email]]
         </p>
       </app-toolbar>
       <paper-listbox>
@@ -241,10 +249,6 @@ drawer for admin functions
     Polymer({
       is:'admin-drawer',
       properties:{
-        //user from auth object used to get current email
-        user:{
-          type: Object
-        },
         //admin string... may be redundant at this point...
         admin: {
           type:String,
